# OpenCiviWiki

./: .all-contributorsrc  .editorconfig  .env  .env_sample  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  CONTRIBUTING.md  CiviWiki Key Functionality Report.odt  Dockerfile  GDPR_stuff.txt  License.md  Procfile  Procfile.dev  Procfile.prod  README.md  account.html  accountinfo.txt  accountinfo1.txt  demodata.json  docker-compose.yml  entrypoint.sh  forms.py  old_code_for_future_reference.txt  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: FORM.yml  Feature.yml  bug.yml  feature.yml
.github/workflows/: codacy.yml  codeql-analysis.yml  main.yml
api/: forms.py  read.py  tasks.py  urls.py  write.py
authentication/: authentication.py  forms.py  reserved_usernames.py  urls.py
civiwiki/: celery.py  routing.py  settings.py  urls.py  wsgi.py
data/: categories.json  congress.json
env/: pip-selfcheck.json
fixtures/: legislators_100916.json  user_fixture.json
frontend_views/: urls.py  views.py
legislation/: models.py  sunlightapi.py
project/: .babelrc  .coverage  .eslintrc.json  .gitignore  Procfile  Procfile.prod  app.json  manage.py  package-lock.json  package.json  requirements.txt  setup.cfg  webpack.config.js
readmes/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  docker-setup.md  local-setup.md  testing.md
requirements/: base.txt  base.txt # includes all dependencies in `base.txt  dev.txt  prod.txt  test.txt
utils/: constants.py  custom_decorators.py
(+1036 files in other folders)
